examples/invalid_typed_messages/missing_message_type.argx
module invalid.missing_message
agent Worker { receives MissingMessage }
